[project]
name = "fornax-cutouts"
version = "0.1.0"
description = "NASA Fornax Cutouts - Pluggable backend for Async FITS cutouts with FastAPI + Celery using the IVOA UWS standard"
readme = "README.md"
license = { text = "BSD-3-Clause" }
authors = [{ name = "Daniel Sarmiento", email = "dsarmiento@stsci.edu" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "astrocut>=1.1.0",
    "celery>=5.5.0",
    "click>=8.3.0",
    "fastapi[standard]>=0.115.0",
    "fastapi-utils>=0.8.0",
    "httpx>=0.28.1",
    "pydantic>=2.6,<3",
    "pydantic-settings>=2.11.0",
    "redis>=6.2",
    "typing-inspect>=0.9.0",
    "uvicorn[standard]>=0.37.0",
    "vo-models>=0.5.0",
]

[dependency-groups]
dev = [
    "isort>=7.0.0",
    "pre-commit>=4.3.0",
    "ruff>=0.14.1",
]

[project.scripts]
fornax-cutouts = "fornax_cutouts.cli:main"

[build-system]
requires = ["uv_build >= 0.9.2, <0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "."

[tool.ruff]
indent-width = 4
line-length = 120

[tool.ruff.lint]
extend-select = ["C", "I", "FAST", "RUF"]

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.format]
indent-style = "space"
line-ending = "auto"
quote-style = "double"
skip-magic-trailing-comma = false
